bk_ida/gccida/c1/error_with_decl
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/error_with_decl/src/diagnostic.c:1622:48: error: expected expression
diagnostic_for_decl( decl, msgid, ( va_list_0 *)va, 0); 
                                               ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/error_with_decl/src/diagnostic.c:1622:37: error: use of undeclared identifier 'va_list_0'
diagnostic_for_decl( decl, msgid, ( va_list_0 *)va, 0); 
                                    ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/error_with_decl/src/obj/diagnostic.o] Error 1
